base/infra/monitoring/victoriametrics/vmalert/vmalert-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmalert-persistent
  namespace: monitoring
  labels:
    owner: devops
    stream: devops
    env: ${env}
    app: vmalert
    product: observability
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/group.name: demo-platform-private
    alb.ingress.kubernetes.io/group.order: "100"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/certificate-arn: ${tools_cert_arn}
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
spec:
  ingressClassName: alb
  rules:
    - host: vmalert.${private_domain}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: vmalert-persistent
                port:
                  number: 8080
